--- a/package.json
+++ b/package.json
@@ -14,23 +14,12 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "@types/jest": "^29.5.2",
-    "@types/uuid": "^9.0.2",
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "jest-environment-miniflare": "^2.14.0",
-    "jest-junit": "^16.0.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3",
-    "wrangler": "^3.1.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,8 +45,6 @@
     "@testing-library/user-event": "^13.5.0",
     "history": "^5.3.0",
     "jsdom": "^19.0.0",
-    "prettier": "^2.6.0",
-    "typescript": "^5.1.3",
-    "vi-fetch": "^0.6.1"
+    "prettier": "^2.6.0"
   }
 }
