--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "static": "npm run build && serve -s build",
+    "static": "npm run build && serve -s build -l 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
