--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@mytiki/intg-shopify-frontend",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@shopify/app-bridge": "^3.1.0",
     "@shopify/app-bridge-react": "^3.1.0",
     "@shopify/app-bridge-utils": "^3.1.0",
@@ -11,15 +10,21 @@
     "@shopify/polaris": "^10.0.0",
     "@shopify/react-form": "^2.5.0",
     "@shopify/react-i18n": "^7.8.0",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "dotenv": "^16.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.38",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.34.19",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "static": "npm run build && serve -s build -l 3000",
@@ -27,6 +32,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -39,13 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "history": "^5.3.0",
-    "jsdom": "^19.0.0",
-    "prettier": "^2.6.0"
   }
 }
