--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy":  "npm run build && wrangler pages deploy build",
     "static": "npm run build && serve -s build -l 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
