--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
@@ -27,7 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "deploy":  "npm run build && wrangler pages deploy build",
+    "deploy": "npm run build && wrangler pages deploy build",
     "static": "npm run build && serve -s build -l 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
